updated base layout

--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-  <header></header>
-  <main></main>
-  <footer></footer>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- Header -->
+    <header class="header">
+      <nav class="nav-container"></nav>
+    </header>
+    <main>
+      <!-- Hero Section -->
+      <section class="hero-section">
+        <div class="hero-container"></div>
+      </section>
+
+      <!-- Trusted Companies Section -->
+      <section class="trusted-companies">
+        <div class="companies-container"></div>
+      </section>
+
+      <!-- Video Section -->
+      <section class="video-section">
+        <div class="video-container"></div>
+      </section>
+
+      <!-- App Features Section -->
+      <section class="app-features">
+        <div class="features-container"></div>
+      </section>
+
+      <!-- Service Advantages Section -->
+      <section class="service-advantages">
+        <div class="advantages-container"></div>
+      </section>
+
+      <!-- Subscription Section -->
+      <section class="subscription">
+        <div class="subscription-container"></div>
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-container"></div>
+    </footer>
+  </body>
 </html>
