--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <!-- Video Section -->
       <section class="video-section">
         <div class="video-container">
-          <div>
+          <img class="video-overlay" src="images/streets.webp" alt="Overlay Image" />
+          <div class="video-content">
             <h2 class="video-heading">Check out our video:</h2>
             <iframe
               class="video-iframe"
