--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Header -->
@@ -14,7 +18,16 @@
     <main>
       <!-- Hero Section -->
       <section class="hero-section">
-        <div class="hero-container"></div>
+        <div class="hero-container">
+          <div class="hero-badge">🚀 Pioneering the Future of Mobility</div>
+          <h1>This is the heading</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nihil cumque repellendus
+            vel quos repellat et aspernatur aliquam in. Incidunt optio, laboriosam perferendis
+            inventore magnam rem. Incidunt iste debitis necessitatibus!
+          </p>
+          <div class="hero-cta-btn">Try Now</div>
+        </div>
       </section>
 
       <!-- Trusted Companies Section -->
