--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             vel quos repellat et aspernatur aliquam in. Incidunt optio, laboriosam perferendis
             inventore magnam rem. Incidunt iste debitis necessitatibus!
           </p>
-          <div class="hero-cta-btn">Try Now</div>
+          <div class="hero-cta-btn">Join the Revolution</div>
         </div>
       </section>
 
