Added the footer

--- a/index.html
+++ b/index.html
@@ -59,7 +59,20 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="footer-container"></div>
+      <div class="footer-container">
+        <h3>Your product</h3>
+        <div class="footer-links">
+          <a href="#">Home</a>
+          <a href="#">Features</a>
+          <a href="#">Prices</a>
+        </div>
+        <div class="social-links">
+          <a href="#" class="social-icon">FB</a>
+          <a href="#" class="social-icon">IG</a>
+          <a href="#" class="social-icon">YT</a>
+          <a href="#" class="social-icon">LI</a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
