--- a/index.html
+++ b/index.html
@@ -62,7 +62,28 @@
 
       <!-- Service Advantages Section -->
       <section class="service-advantages">
-        <div class="advantages-container"></div>
+        <div class="advantages-container">
+          <h1>This is again a heading</h1>
+          <div>Book a ride -></div>
+          <div class="services-grid">
+            <div class="services-card">
+              <h3>This is heading</h3>
+              <p>THis is a paragraph</p>
+            </div>
+            <div class="services-card">
+              <h3>This is heading</h3>
+              <p>THis is a paragraph</p>
+            </div>
+            <div class="services-card">
+              <h3>This is heading</h3>
+              <p>THis is a paragraph</p>
+            </div>
+            <div class="services-card">
+              <h3>This is heading</h3>
+              <p>THis is a paragraph</p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- Subscription Section -->
