--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <section class="hero-section">
         <div class="hero-container">
           <div class="hero-badge">🚀 Pioneering the Future of Mobility</div>
-          <h1>This is the heading</h1>
+          <h1>Drive Into the Future With Us</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nihil cumque repellendus
-            vel quos repellat et aspernatur aliquam in. Incidunt optio, laboriosam perferendis
-            inventore magnam rem. Incidunt iste debitis necessitatibus!
+            Our self-driven car taxi service is revolutionizing transportation with cutting-edge
+            technology, unmatched safety, and eco-friendly efficiency. Experience a smarter, safer,
+            and more convenient way to travel, crafted for the modern world.
           </p>
           <div class="hero-cta-btn">Join the Revolution -></div>
         </div>
@@ -63,24 +63,36 @@
       <!-- Service Advantages Section -->
       <section class="service-advantages">
         <div class="advantages-container">
-          <h1>This is again a heading</h1>
-          <div>Book a ride -></div>
+          <h1>Why 61% of Fortune 500 Trust Us for Self-Driving Cars</h1>
+          <div class="services-cta-btn">Book a ride -></div>
           <div class="services-grid">
             <div class="services-card">
-              <h3>This is heading</h3>
-              <p>THis is a paragraph</p>
+              <h3>Unmatched Convenience</h3>
+              <p>
+                Experience seamless travel with our self-driven cars, designed to save you time and
+                effort.
+              </p>
             </div>
             <div class="services-card">
-              <h3>This is heading</h3>
-              <p>THis is a paragraph</p>
+              <h3>Advanced Safety Features</h3>
+              <p>
+                Our cars are equipped with cutting-edge safety systems to ensure a secure journey
+                every time.
+              </p>
             </div>
             <div class="services-card">
-              <h3>This is heading</h3>
-              <p>THis is a paragraph</p>
+              <h3>Eco-Friendly Rides</h3>
+              <p>
+                We prioritize sustainability with energy-efficient vehicles, reducing your carbon
+                footprint.
+              </p>
             </div>
             <div class="services-card">
-              <h3>This is heading</h3>
-              <p>THis is a paragraph</p>
+              <h3>Affordable Luxury</h3>
+              <p>
+                Enjoy premium service at competitive rates, making your travels both comfortable and
+                budget-friendly.
+              </p>
             </div>
           </div>
         </div>
