added footer and pricing

--- a/index.html
+++ b/index.html
@@ -54,7 +54,49 @@
 
       <!-- Subscription Section -->
       <section class="subscription">
-        <div class="subscription-container"></div>
+        <div class="subscription-container">
+          <h2>Subscription Plans</h2>
+          <div class="pricing-cards">
+            <div class="pricing-card">
+              <div class="price-amount">$49</div>
+              <p class="price-description">
+                Perfect for getting started
+              </p>
+              <ul class="features-list">
+                <li>Basic Feature 1</li>
+                <li>Basic Feature 2</li>
+                <li>Basic Feature 3</li>
+              </ul>
+              <button class="subscribe-btn">Subscribe Now</button>
+            </div>
+
+            <div class="pricing-card">
+              <div class="price-amount">$99</div>
+              <p class="price-description">
+                Get awesome features, without extra charges
+              </p>
+              <ul class="features-list">
+                <li>Premium Feature 1</li>
+                <li>Premium Feature 2</li>
+                <li>Premium Feature 3</li>
+              </ul>
+              <button class="subscribe-btn">Subscribe Now</button>
+            </div>
+
+            <div class="pricing-card">
+              <div class="price-amount">$149</div>
+              <p class="price-description">
+                Advanced features for pros
+              </p>
+              <ul class="features-list">
+                <li>Advanced Feature 1</li>
+                <li>Advanced Feature 2</li>
+                <li>Advanced Feature 3</li>
+              </ul>
+              <button class="subscribe-btn">Subscribe Now</button>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!-- Footer -->
