Added the navbar section and applied CSS styling to it

--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
     />
   </head>
   <body>
-    <!-- Header -->
-    <header class="header">
-      <nav class="nav-container"></nav>
-    </header>
+<!-- Navbar -->
+<nav class="navbar">
+  <div class="logo">
+      <a href="#">Try Waymo</a>
+  </div>
+  <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Features</a></li>
+      <li><a href="#">Prices</a></li>
+      <li><a href="#">Try it for free</a></li>
+  </ul>
+</nav>
     <main>
       <!-- Hero Section -->
       <section class="hero-section">
