Added the company section and applied CSS styling to it

--- a/index.html
+++ b/index.html
@@ -38,10 +38,17 @@
         </div>
       </section>
 
-      <!-- Trusted Companies Section -->
-      <section class="trusted-companies">
-        <div class="companies-container"></div>
-      </section>
+    <!-- Trusted Companies Section -->
+    <section class="trusted-companies">
+      <h1>Trusted Companies by us</h1>
+      <br>
+      <div class="companies-container">
+          <div>Stellantis</div>
+          <div>Mercedes-Benz</div>
+          <div>Volvo</div>
+          <div>Jaguar Land Rover</div>
+      </div>
+  </section>
 
       <!-- Video Section -->
       <section class="video-section">
