added features, pricing, footer

--- a/index.html
+++ b/index.html
@@ -72,7 +72,26 @@
 
       <!-- App Features Section -->
       <section class="app-features">
-        <div class="features-container"></div>
+        <div class="features-container">
+          <h2>App Features</h2>
+          <div class="features-grid">
+            <div class="feature-card">
+              <div class="feature-icon"></div>
+              <h3>Fast Performance</h3>
+              <p>Experience lightning-fast gameplay with our optimized engine</p>
+            </div>
+            <div class="feature-card">
+              <div class="feature-icon"></div>
+              <h3>Easy Controls</h3>
+              <p>Intuitive controls make gaming accessible for everyone</p>
+            </div>
+            <div class="feature-card">
+              <div class="feature-icon"></div>
+              <h3>Multiplayer</h3>
+              <p>Connect and compete with players worldwide</p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- Service Advantages Section -->
@@ -115,12 +134,66 @@
 
       <!-- Subscription Section -->
       <section class="subscription">
-        <div class="subscription-container"></div>
+        <div class="subscription-container">
+          <h2>Subscription Plans</h2>
+          <div class="pricing-cards">
+            <div class="pricing-card">
+              <div class="price-amount">$49</div>
+              <p class="price-description">
+                Perfect for getting started
+              </p>
+              <ul class="features-list">
+                <li>Basic Feature 1</li>
+                <li>Basic Feature 2</li>
+                <li>Basic Feature 3</li>
+              </ul>
+              <button class="subscribe-btn">Subscribe Now</button>
+            </div>
+
+            <div class="pricing-card">
+              <div class="price-amount">$99</div>
+              <p class="price-description">
+                Get awesome features, without extra charges
+              </p>
+              <ul class="features-list">
+                <li>Premium Feature 1</li>
+                <li>Premium Feature 2</li>
+                <li>Premium Feature 3</li>
+              </ul>
+              <button class="subscribe-btn">Subscribe Now</button>
+            </div>
+
+            <div class="pricing-card">
+              <div class="price-amount">$149</div>
+              <p class="price-description">
+                Advanced features for pros
+              </p>
+              <ul class="features-list">
+                <li>Advanced Feature 1</li>
+                <li>Advanced Feature 2</li>
+                <li>Advanced Feature 3</li>
+              </ul>
+              <button class="subscribe-btn">Subscribe Now</button>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="footer-container"></div>
-    </footer>
+      <div class="footer-container">
+        <h3>Your product</h3>
+        <div class="footer-links">
+          <a href="#">Home</a>
+          <a href="#">Features</a>
+          <a href="#">Prices</a>
+        </div>
+        <div class="social-links">
+          <a href="#" class="social-icon">FB</a>
+          <a href="#" class="social-icon">IG</a>
+          <a href="#" class="social-icon">YT</a>
+          <a href="#" class="social-icon">LI</a>
+        </div>
+      </div>
   </body>
 </html>
