added companies section

--- a/index.html
+++ b/index.html
@@ -38,17 +38,84 @@
         </div>
       </section>
 
-    <!-- Trusted Companies Section -->
-    <section class="trusted-companies">
-      <h1>Trusted Companies by us</h1>
-      <br>
-      <div class="companies-container">
-          <div>Stellantis</div>
-          <div>Mercedes-Benz</div>
-          <div>Volvo</div>
-          <div>Jaguar Land Rover</div>
-      </div>
-  </section>
+      <!-- Trusted Companies Section -->
+      <section class="trusted-companies">
+        <div class="companies-container">
+          <h2>Trusted by companies like</h2>
+          <ul class="companies-list">
+            <li class="company-item">
+              <img
+                alt="Lyft"
+                style="height: 64px"
+                src="https://github.githubassets.com/assets/lyft-ff04a849adcd.svg"
+              />
+            </li>
+            <li class="company-item">
+              <img
+                alt="FedEx"
+                style="height: 37px"
+                src="https://github.githubassets.com/assets/fedex-4fbd5209ba18.svg"
+              />
+            </li>
+            <li class="company-item">
+              <img
+                alt="AT&amp;T"
+                style="height: 47px"
+                src="https://github.githubassets.com/assets/atnt-a1d3c3d04a75.svg"
+              />
+            </li>
+            <li class="company-item">
+              <img
+                alt="Shopify"
+                style="height: 40px"
+                src="https://github.githubassets.com/assets/shopify-c893630d6403.svg"
+              />
+            </li>
+            <li class="company-item">
+              <img
+                alt="BMW"
+                style="height: 72px"
+                src="https://github.githubassets.com/assets/bmw-72cecc644c23.svg"
+              />
+            </li>
+            <li class="company-item">
+              <img
+                alt="H&amp;M"
+                style="height: 52px"
+                src="https://github.githubassets.com/assets/hnm-7f6d81c34913.svg"
+              />
+            </li>
+            <li class="company-item">
+              <img
+                alt="Honeywell"
+                style="height: 36px"
+                src="https://github.githubassets.com/assets/honeywell-cbed470d5960.svg"
+              />
+            </li>
+            <li class="company-item">
+              <img
+                alt="EY"
+                style="height: 48px; margin-top: -16px"
+                src="https://github.githubassets.com/assets/ey-cd7494447821.svg"
+              />
+            </li>
+            <li class="company-item">
+              <img
+                alt="Infosys"
+                style="height: 36px"
+                src="https://github.githubassets.com/assets/infosys-935e1fcdf87b.svg"
+              />
+            </li>
+            <li class="company-item">
+              <img
+                alt="BBVA"
+                style="height: 36px"
+                src="https://github.githubassets.com/assets/bbva-538b46252b6e.svg"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
 
       <!-- Video Section -->
       <section class="video-section">
