Added several changes including the social media links and app features

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"/>
+
+      <!--Favicon-->
       <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
+
+
   </head>
   <body>
 <!-- Navbar -->
@@ -85,13 +89,13 @@
             </div>
             <div class="feature-card">
               <div class="feature-icon"></div>
-              <h3>Easy Controls</h3>
-              <p>Intuitive controls make gaming accessible for everyone</p>
+              <h3>Waymo Driver</h3>
+              <p>Waymo Driver is the name of the technology stack that powers Waymo's autonomous vehicles which includes Sensors, Machine Learning, AI and Mapping.</p>
             </div>
             <div class="feature-card">
               <div class="feature-icon"></div>
-              <h3>Multiplayer</h3>
-              <p>Connect and compete with players worldwide</p>
+              <h3>Safety Features</h3>
+              <p>Waymo’s autonomous vehicles are built with redundancy in key systems, such as steering, braking, and power, ensuring that if one system fails, the car can still operate safely.</p>
             </div>
           </div>
         </div>
@@ -192,10 +196,10 @@
           <a href="#">Prices</a>
         </div>
         <div class="social-links">
-          <a href="#" class="social-icon">FB</a>
-          <a href="#" class="social-icon">IG</a>
-          <a href="#" class="social-icon">YT</a>
-          <a href="#" class="social-icon">LI</a>
+          <a href="https://facebook.com" class="social-icon" target="_blank">FB</a>
+          <a href="https://instagram.com" class="social-icon" target="_blank">IG</a>
+          <a href="https://www.youtube.com/" class="social-icon" target="_blank">YT</a>
+          <a href="https://linkedin.com" class="social-icon" target="_blank">LI</a>
         </div>
       </div>
   </body>
