Added new change

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           <div class="features-grid">
             <div class="feature-card">
               <div class="feature-icon"></div>
-              <h3>Fast Performance</h3>
-              <p>Experience lightning-fast gameplay with our optimized engine</p>
+              <h3>Collaboration with Cities and Governments</h3>
+              <p>Waymo works closely with cities and local governments to integrate its self-driving technology into urban infrastructure. This collaboration helps ensure that its vehicles can operate safely in complex city environments and aligns with local transportation regulations.</p>
             </div>
             <div class="feature-card">
               <div class="feature-icon"></div>
